Nested factories (#667)
* Add support for Plugins, which can nest

Signed-off-by: Tom Bentley <tbentley@redhat.com>